--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.4",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
     "expo-image-picker": "~14.3.2",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -26,8 +28,7 @@
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^10.0.3",
-    "expo-splash-screen": "~0.20.5"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
