--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.4",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
+    "expo-dev-client": "~2.4.12",
     "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -25,6 +26,7 @@
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-mlkit-ocr": "^0.3.0",
+    "react-native-paper": "^5.11.6",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
