--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-mlkit-ocr": "^0.3.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.6",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
